--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,14 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
     implementation project(":baselibrary")
+
+// 如果想使用SwipeBack 滑动边缘退出Fragment/Activity功能，完整的添加规则如下：
+    implementation 'me.yokeyword:fragmentation:1.3.7'
+// swipeback基于fragmentation, 如果是自定制SupportActivity/Fragment，则参照SwipeBackActivity/Fragment实现即可
+    implementation 'me.yokeyword:fragmentation-swipeback:1.3.7'
+
+// Activity作用域的EventBus，更安全，可有效避免after onSavenInstanceState()异常
+    implementation 'me.yokeyword:eventbus-activity-scope:1.1.0'
+// Your EventBus's version
+    implementation 'org.greenrobot:eventbus:3.1.1'
 }
