--- a/baselibrary/build.gradle
+++ b/baselibrary/build.gradle
@@ -31,10 +31,14 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation 'androidx.appcompat:appcompat:1.0.2'
+    api 'androidx.appcompat:appcompat:1.0.2'
+    api 'androidx.core:core-ktx:1.0.2'
+    annotationProcessor 'androidx.annotation:annotation:1.1.0'
+    api 'androidx.constraintlayout:constraintlayout:1.1.3'
+
+
+    api "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     //解决Glide找不到Android声明库问题
-    annotationProcessor 'androidx.annotation:annotation:1.0.0'
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
     api 'com.squareup.okhttp3:okhttp:3.12.0'
     api 'com.squareup.okhttp3:logging-interceptor:3.11.0'
@@ -48,4 +52,15 @@ dependencies {
 
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
+
+// 如果不想继承SupportActivity/Fragment，自己定制Support，可仅依赖:
+    api 'me.yokeyword:fragmentation-core:1.3.7'
+    // 如果想使用SwipeBack 滑动边缘退出Fragment/Activity功能，完整的添加规则如下：
+//    api 'me.yokeyword:fragmentation:1.3.7'
+// swipeback基于fragmentation, 如果是自定制SupportActivity/Fragment，则参照SwipeBackActivity/Fragment实现即可
+    api 'me.yokeyword:fragmentation-swipeback:1.3.7'
+// Activity作用域的EventBus，更安全，可有效避免after onSavenInstanceState()异常
+    api 'me.yokeyword:eventbus-activity-scope:1.1.0'
+// Your EventBus's version
+    api 'org.greenrobot:eventbus:3.1.1'
 }
