--- a/baselibrary/build.gradle
+++ b/baselibrary/build.gradle
@@ -63,4 +63,6 @@ dependencies {
     api 'me.yokeyword:eventbus-activity-scope:1.1.0'
 // Your EventBus's version
     api 'org.greenrobot:eventbus:3.1.1'
+
+    api 'com.billy.android:gloading:1.1.0'   //状态占位图
 }
