--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,8 @@ dependencies {
     implementation project(":baselibrary")
 
 
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'com.google.android.material:material:1.0.0'
+    implementation project(":actionbarex")
 }
