--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.littlegreens.wanandroidmvp">
+        package="com.littlegreens.wanandroidmvp">
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
@@ -10,24 +10,26 @@
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
+            android:networkSecurityConfig="@xml/network_security_config"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
-            android:theme="@style/AppTheme"
-            android:networkSecurityConfig="@xml/network_security_config">
-        <activity android:name=".MainActivity">
-
-        </activity>
-        <activity android:name=".modules.home.activity.HomeActivity">
+            android:theme="@style/AppTheme">
+        <activity
+                android:name=".modules.main.activity.MainActivity"
+                android:label="@string/title_activity_main"
+               >
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
+                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity android:name=".modules.user.activity.LoginActivity">
-
 
         </activity>
+        <activity android:name=".TestActivity"></activity>
+        <activity android:name=".modules.home.activity.HomeActivity">
+
+        </activity>
+        <activity android:name=".modules.user.activity.LoginActivity"></activity>
     </application>
 
 </manifest>
