--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,13 +24,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-
-
     implementation project(":baselibrary")
-
-
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'com.google.android.material:material:1.0.0'
-    implementation project(":actionbarex")
+//    implementation project(":actionbarex")
 }
