--- a/baselibrary/build.gradle
+++ b/baselibrary/build.gradle
@@ -53,14 +53,20 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
 
-// 如果不想继承SupportActivity/Fragment，自己定制Support，可仅依赖:
-    api 'me.yokeyword:fragmentation-core:1.3.7'
-    // 如果想使用SwipeBack 滑动边缘退出Fragment/Activity功能，完整的添加规则如下：
-//    api 'me.yokeyword:fragmentation:1.3.7'
-// swipeback基于fragmentation, 如果是自定制SupportActivity/Fragment，则参照SwipeBackActivity/Fragment实现即可
-    api 'me.yokeyword:fragmentation-swipeback:1.3.7'
-// Activity作用域的EventBus，更安全，可有效避免after onSavenInstanceState()异常
-    api 'me.yokeyword:eventbus-activity-scope:1.1.0'
+//// 如果不想继承SupportActivity/Fragment，自己定制Support，可仅依赖:
+//    api 'me.yokeyword:fragmentation-core:1.3.7'
+//    // 如果想使用SwipeBack 滑动边缘退出Fragment/Activity功能，完整的添加规则如下：
+////    api 'me.yokeyword:fragmentation:1.3.7'
+//// swipeback基于fragmentation, 如果是自定制SupportActivity/Fragment，则参照SwipeBackActivity/Fragment实现即可
+//    api 'me.yokeyword:fragmentation-swipeback:1.3.7'
+//// Activity作用域的EventBus，更安全，可有效避免after onSavenInstanceState()异常
+//    api 'me.yokeyword:eventbus-activity-scope:1.1.0'
+
+
+//    implementation 'me.yokeyword:fragmentationx:1.0.1'
+    api 'me.yokeyword:fragmentationx-core:1.0.1'
+    // To simplify the communication between Fragments.
+    implementation 'me.yokeyword:eventbus-activity-scope:1.1.0'
 // Your EventBus's version
     api 'org.greenrobot:eventbus:3.1.1'
 
